--- a/css/menu.less
+++ b/css/menu.less
@@ -194,13 +194,13 @@ label[for="nav-trigger"] {
     top: 40px;
     right: -80%;
     z-index: 9999;
-    padding: 0;
+    padding: 0 !important; // #FIXME
     transition: right 0.6s ease;
     box-shadow: 0 0 5px 0px #777777;
     .menu-list {
       margin: 0;
     }
-    .nav-trigger&:checked ~ & {
+    .nav-trigger:checked ~ & {
       right: 0;
     }
   })
